Bug 873812 - Don't attempt to open camera objects/probe capabilities more than once. r=jesup