media/webrtc/trunk/webrtc/modules/video_capture/android/video_capture_android.cc
@@ -71,6 +71,13 @@ WebRtc_Word32 VideoCaptureAndroid::SetAndroidObjects(void* javaVM,
   g_jvm = static_cast<JavaVM*> (javaVM);
 
   if (javaVM) {
+    // Already done? Exit early.
+    if (g_javaCmClass != NULL
+        && g_javaCmDevInfoClass != NULL
+        && g_javaCmDevInfoObject != NULL) {
+        return 0;
+    }
+
     JNIEnv* env = NULL;
     if (g_jvm->GetEnv((void**) &env, JNI_VERSION_1_4) != JNI_OK) {
       WEBRTC_TRACE(webrtc::kTraceError, webrtc::kTraceVideoCapture, -1,
